fixing IE8 layout problems

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -30,11 +30,13 @@ div {
 }
 
 .fixed_logo {  
-  width: 90px;  
+  width: 90px; 
+  max-width: none;
 }
 
 .fixed_thumb {  
   width: 80px;  
+  max-width: none;
 }
 
 .field_with_errors {
